Se hace un buen login

--- a/ReservaCanchas/Views/Shared/_Layout.cshtml
+++ b/ReservaCanchas/Views/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
                     <li>
                         <a href="@Url.Action("Privacy", "Home")">Privacy</a>
                     </li>
+                    <li>
+                        <a href="@Url.Action("Login", "Auth")">Login</a>
+                    </li>
                 </ul>
             </div>
         </nav>
