--- a/ReservaCanchas/Views/Shared/_Layout.cshtml
+++ b/ReservaCanchas/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                         <a href="@Url.Action("Privacy", "Home")">Privacy</a>
                     </li>
                     <li>
-                        <a href="@Url.Action("Login", "Auth")">Login</a>
+                        <a href="@Url.Action("Login", "Auth")">Loginn</a>
                     </li>
                 </ul>
             </div>
