--- a/ReservaCanchas/Views/Home/Index.cshtml
+++ b/ReservaCanchas/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page ";
 }
 
 <div>
-    <h1>Welcome</h1>
+    <h1>Bienvenidos</h1>
+    <h2>Sistema de Reserva de Espacios Deportivos</h2>
+
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
