--- a/ReservaCanchas/Views/Shared/_Layout.cshtml
+++ b/ReservaCanchas/Views/Shared/_Layout.cshtml
@@ -7,23 +7,18 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ReservaCanchas.styles.css" asp-append-version="true" />
 </head>
-<body>
+<body class="bg-web">
     <header>
-        <nav>
+        <nav class="barra-navegacion">
             <div>
                 <a href="@Url.Action("Index", "Home")">ReservaCanchas</a>
-                <ul>
-                    <li>
-                        <a href="@Url.Action("Index", "Home")">Home</a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("Privacy", "Home")">Privacy</a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("Login", "Auth")">Loginn</a>
-                    </li>
-                </ul>
             </div>
+            <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+            <ul class="menu">
+                <li><a href="@Url.Action("Index", "Home")">Inicio</a></li>
+                <li><a href="@Url.Action("Privacy", "Home")">Privacy</a></li>
+                <li><a href="@Url.Action("Login", "Auth")">Iniciar Sesión</a></li>
+            </ul>
         </nav>
     </header>
     <div>
@@ -39,4 +34,10 @@
     </footer>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+<script>
+  function toggleMenu() {
+    const menu = document.querySelector('.menu');
+    menu.classList.toggle('show');
+  }
+</script>
 </html>
