--- a/ReservaCanchas/wwwroot/css/site.css
+++ b/ReservaCanchas/wwwroot/css/site.css
@@ -151,3 +151,152 @@ body, html {
     display: flex;
   }
 }
+
+/* Contenedor principal para el login y registro */
+.login-container, .register-container {
+  display: flex;
+  width: 80%;
+  max-width: 100rem;
+  height: 45rem;
+  margin: 5rem auto;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 1rem;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+}
+
+/* Información decorativa */
+.login-info, .register-info {
+  background-color: var(--colorPrimario); /* Cambiar por el color deseado */
+  color: var(--blanco);
+  padding: 3rem;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.login-info img, .register-info img {
+  width: 15rem;
+  height: 15rem;
+  margin-top: 20px;
+}
+
+.login-info h2, .register-info h2 {
+  font-size: 2.4rem;
+  margin: 1rem 0;
+}
+
+.login-info p, .register-info p {
+  font-size: 1.6rem;
+}
+
+/* Formulario */
+.login-form, .register-form {
+  flex: 1;
+  padding: 3rem;
+  background-color: var(--colorSecundario);
+  color: var(--blanco);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-form h3 {
+  font-size: 3rem;
+  color: var(--colorPrimario);
+  margin-bottom: 3rem;
+}
+.register-form h3 {
+  font-size: 3rem;
+  color: var(--colorPrimario);
+  margin-bottom: 2rem;
+}
+
+.login-form form, .register-form form {
+  width: 100%;
+  max-width: 30rem;
+}
+
+.login-form label, .register-form label {
+  color: #fff;
+  font-size: 1.4rem;
+}
+
+.login-form input {
+  width: 100%;
+  padding: 0.8rem;
+  margin-top: 0.5rem;
+  margin-bottom: 3rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1.4rem;
+}
+
+.register-form input {
+  width: 100%;
+  padding: 0.8rem;
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 1.4rem;
+}
+
+button[type="submit"] {
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--colorPrimario);
+  color: var(--blanco);
+  font-size: 1.6rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button[type="submit"]:hover {
+  background-color: #3949ab; 
+}
+
+.login-form p, .register-form p {
+  margin-top: 2rem;
+  font-size: 1.3rem;
+}
+
+.login-form p a, .register-form p a {
+  margin-left: 0.5rem;
+  color: var(--colorPrimario);
+}
+
+.login-form p a:hover, .register-form p a:hover {
+  color: #3949ab;
+}
+
+.error-message {
+  color: red;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .login-container, .register-container {
+    flex-direction: column;
+  }
+
+  .login-info, .register-info {
+    padding: 1.5rem;
+  }
+
+  .login-form, .register-form {
+    padding: 1.5rem;
+  }
+
+  .login-container, .register-container {
+    height: 95rem;
+  }
+}
