Completado el login y register al 100%

--- a/ReservaCanchas/Views/Auth/Register.cshtml
+++ b/ReservaCanchas/Views/Auth/Register.cshtml
@@ -3,14 +3,14 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="register-container">
-    <div class="register-info">
+<div class="registro-container">
+    <div class="registro-info">
         <h2>Únete a Reserva Tu Cancha</h2>
         <p>¡Crea tu cuenta para empezar a disfrutar y reservar canchas fácilmente!</p>
         <img src="~/img/copa-login.png" alt="Copa" class="logo-copa"/>
     </div>
 
-    <div class="register-form">
+    <div class="registro-form">
         <h3>Crear una cuenta</h3>
         @if (ViewBag.Errores != null)
         {
