--- a/ReservaCanchas/wwwroot/css/site.css
+++ b/ReservaCanchas/wwwroot/css/site.css
@@ -153,7 +153,7 @@ body, html {
 }
 
 /* Contenedor principal para el login y registro */
-.login-container, .register-container {
+.login-container, .registro-container {
   display: flex;
   width: 80%;
   max-width: 100rem;
@@ -166,7 +166,7 @@ body, html {
 }
 
 /* Información decorativa */
-.login-info, .register-info {
+.login-info, .registro-info {
   background-color: var(--colorPrimario); /* Cambiar por el color deseado */
   color: var(--blanco);
   padding: 3rem;
@@ -178,23 +178,23 @@ body, html {
   text-align: center;
 }
 
-.login-info img, .register-info img {
+.login-info img, .registro-info img {
   width: 15rem;
   height: 15rem;
   margin-top: 20px;
 }
 
-.login-info h2, .register-info h2 {
+.login-info h2, .registro-info h2 {
   font-size: 2.4rem;
   margin: 1rem 0;
 }
 
-.login-info p, .register-info p {
+.login-info p, .registro-info p {
   font-size: 1.6rem;
 }
 
 /* Formulario */
-.login-form, .register-form {
+.login-form, .registro-form {
   flex: 1;
   padding: 3rem;
   background-color: var(--colorSecundario);
@@ -210,18 +210,18 @@ body, html {
   color: var(--colorPrimario);
   margin-bottom: 3rem;
 }
-.register-form h3 {
+.registro-form h3 {
   font-size: 3rem;
   color: var(--colorPrimario);
   margin-bottom: 2rem;
 }
 
-.login-form form, .register-form form {
+.login-form form, .registro-form form {
   width: 100%;
   max-width: 30rem;
 }
 
-.login-form label, .register-form label {
+.login-form label, .registro-form label {
   color: #fff;
   font-size: 1.4rem;
 }
@@ -236,7 +236,7 @@ body, html {
   font-size: 1.4rem;
 }
 
-.register-form input {
+.registro-form input {
   width: 100%;
   padding: 0.8rem;
   margin-top: 0.5rem;
@@ -262,17 +262,17 @@ button[type="submit"]:hover {
   background-color: #3949ab; 
 }
 
-.login-form p, .register-form p {
+.login-form p, .registro-form p {
   margin-top: 2rem;
   font-size: 1.3rem;
 }
 
-.login-form p a, .register-form p a {
+.login-form p a, .registro-form p a {
   margin-left: 0.5rem;
   color: var(--colorPrimario);
 }
 
-.login-form p a:hover, .register-form p a:hover {
+.login-form p a:hover, .registro-form p a:hover {
   color: #3949ab;
 }
 
@@ -284,19 +284,19 @@ button[type="submit"]:hover {
 
 /* Responsive */
 @media (max-width: 768px) {
-  .login-container, .register-container {
+  .login-container, .registro-container {
     flex-direction: column;
   }
 
-  .login-info, .register-info {
+  .login-info, .registro-info {
     padding: 1.5rem;
   }
 
-  .login-form, .register-form {
+  .login-form, .registro-form {
     padding: 1.5rem;
   }
 
-  .login-container, .register-container {
+  .login-container, .registro-container {
     height: 95rem;
   }
 }
