Pequeñas modificaciones en el login y finalizado el home o inicio

--- a/ReservaCanchas/Views/Auth/Login.cshtml
+++ b/ReservaCanchas/Views/Auth/Login.cshtml
@@ -4,7 +4,7 @@
 
 <div class="login-container">
     <div class="login-info">
-        <h2>Bienvenido a Reserva Tu Cancha</h2>
+        <h2>Reserva Tu Cancha</h2>
         <p>¡Inicia sesión para acceder a todas las funciones y poder reservar una cancha!</p>
         <img src="~/img/copa-login.png" alt="Copa" class="logo-copa"/>
     </div>
