--- a/ReservaCanchas/Views/Auth/Register.cshtml
+++ b/ReservaCanchas/Views/Auth/Register.cshtml
@@ -5,7 +5,7 @@
 
 <div class="registro-container">
     <div class="registro-info">
-        <h2>Únete a Reserva Tu Cancha</h2>
+        <h2>Reserva Tu Cancha</h2>
         <p>¡Crea tu cuenta para empezar a disfrutar y reservar canchas fácilmente!</p>
         <img src="~/img/copa-login.png" alt="Copa" class="logo-copa"/>
     </div>
