--- a/ReservaCanchas/Views/Shared/_Layout.cshtml
+++ b/ReservaCanchas/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ReservaCanchas</title>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ReservaCanchas.styles.css" asp-append-version="true" />
 </head>
 <body class="bg-web">
