--- a/ReservaCanchas/Views/Shared/_Layout.cshtml
+++ b/ReservaCanchas/Views/Shared/_Layout.cshtml
@@ -17,7 +17,15 @@
             <button class="menu-toggle" onclick="toggleMenu()">☰</button>
             <ul class="menu">
                 <li><a href="@Url.Action("Index", "Home")">Inicio</a></li>
-                <li><a href="@Url.Action("Login", "Auth")">Iniciar Sesión</a></li>
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <li><a href="@Url.Action("Inicio2", "Home")">Inicio 2</a></li>
+                    <li><a href="@Url.Action("Logout", "Auth")">Cerrar Sesión</a></li>
+                }
+                else
+                {
+                    <li><a href="@Url.Action("Login", "Auth")">Iniciar Sesión</a></li>
+                }
             </ul>
         </nav>
     </header>
